Added liedjes amsterdam1849-feestliederen1859

--- a/scripts/analyze-liedjes/handmade-topics-with-wordnet.ipynb
+++ b/scripts/analyze-liedjes/handmade-topics-with-wordnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------\n",
+      "synset    : Synset('netherlands.n.01')\n",
+      "definition: a constitutional monarchy in western Europe on the North Sea; half the country lies below sea level\n",
+      "synonyms  : ['Koninkrijk_der_Nederlanden', 'Holland', 'Nederland', 'kikkerland']\n",
+      "hypernyms : []\n",
+      "hyponyms  : []\n",
+      "hyponyms+ : []\n"
+     ]
+    }
+   ],
    "source": [
-    "searchTerm = \"jenever\"\n",
+    "searchTerm = \"nederland\"\n",
     "synsets = getSynsets(searchTerm, pos = wn.NOUN, lang = 'nld')\n",
     "for s in synsets:\n",
     "    showSynset(s, lang = 'nld')\n"
@@ -94,17 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "topic0 = [['alcohol.n.01', 'glass.n.02', 'cup.n.01', 'drink.v.01', 'toast.v.02'],['jenever']]\n",
-    "topic1 = [['club.n.02', 'associate.n.01', 'brotherhood.n.03', 'friendship.n.01'], ['vriendenkring']]\n",
+    "topic1 = [['club.n.02', 'associate.n.01', 'brotherhood.n.03', 'friendship.n.01', 'connect.v.03', 'league.n.02'], ['vriendenkring', 'vriendenrij']]\n",
     "topic2 = [['print.v.03', 'printer.n.01', 'bookbinder.n.01', 'press.n.03', 'printing_concern.n.01'], ['drukkunst', 'boekdrukkunst']]\n",
-    "topic3 = [['sculpture.n.01', 'metallic_element.n.01', 'stone.n.02'],[]]\n",
+    "topic3 = [['sculpture.n.01', 'stone.n.02'],['metaal', 'metalen', 'ijzer', 'ijzeren']]\n",
     "topic4 = [['freedom.n.01', 'flambeau.n.01', 'shine.v.02'], ['licht', 'verlichting', 'wetenschap', 'duisternis', 'lichtstraal', 'wijsheid']]\n",
-    "topic5 = [['invention.n.03', 'invent.v.01', 'discovery.n.03'], ['uitvinden']]\n",
-    "topic6 = [['fatherland.n.01'], ['Nederland', 'Holland', 'Nederlandsch', 'Hollandsch', 'Nederlands', 'Hollands', 'Neerlands']]\n",
+    "topic5 = [['invention.n.03', 'invent.v.01', 'discovery.n.03'], ['uitvinden', 'haarlemmer']]\n",
+    "topic6 = [['fatherland.n.01'], ['nederland', 'holland', 'oranje', 'willem']]\n",
     "topic7 = [['subscriber.n.03', 'boss.n.02'], ['eerelid', 'eereleden', 'beschermheer']]\n",
     "\n",
     "topics = [topic0, topic1, topic2, topic3, topic4, topic5, topic6, topic7]"
@@ -112,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -268,6 +282,7 @@
        "  'toasten',\n",
        "  'toosten'],\n",
        " ['vriendenkring',\n",
+       "  'verbond',\n",
        "  'samenleving',\n",
        "  'gilde',\n",
        "  'gezelschap',\n",
@@ -592,7 +607,7 @@
        "  'patroon']]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
