--- a/scripts/analyze-liedjes/vsm-with-handmade-topics.ipynb
+++ b/scripts/analyze-liedjes/vsm-with-handmade-topics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['https://zotero.org/groups/2707622/items/SGA2CMRR'\n",
-      " 'utrecht1851-feestzangen1854-15' 'VRIENDSCHAP' 'Io Vivat' '1854'\n",
-      " 'B. Lageman' 'utrecht1851']\n"
+      "['' 'utrecht1851-feestzangen1853-04' 'HULDEZANG' 'Wien Neerlands bloed'\n",
+      " '1853' 'C. Mommaas' 'utrecht1851']\n"
      ]
     }
    ],
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../data/liedjes/utrecht1851-feestzangen1854/utrecht1851-feestzangen1854-14.txt\n"
+      "../../data/liedjes/utrecht1851-feestzangen1853/utrecht1851-feestzangen1853-04.txt\n"
      ]
     }
    ],
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,14 +226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "nut genoegen derde jaar weêr vrolijk elkaêr kopperfeest goddank verbond stand houden dee staan nut bevatten nut genieten dees vriendenrij lijden komen ziekengeld regten prijs stellen gevoel heerlijk doel laten zóó voorwaarts gaan inslaan baan ieders nut genoegen kosterschaar klinken feestbokaal zaal genoegen zang muzijk wijn kopperfeest komen broeder glas vatten gevuld druivennat drinken zaâm koster naam welaan welaan welaan moog gelukkig gaan kring o god bidden behoed dee vriendenrij jaar jaar dank elkaêr\n"
+      "huldezang o achtbaar hoofd stad beschermheer kring gun schaar vam vriend lof bezingen o god zien vaderoog beschermer neêr hart klimmen bidden verhoor bede heer komen feestgenoot zingen eer elks patroon verheft lied verheugd blij dankbaarheid schoon danken o edel tal goed verrigt hart blijv staan vall verpligt dankbaarheid ontgloeien verheffen hart zang eer onvermoeid behartigd belang gods zegen blijv gestaâg o venman baan neemt blijde vriendenrei gul danktoon voorstander blijven ons kring bidden schoon rijk zegening maken steun blij onspoed wereld zuur snell leven harten word edel vuur menschenmin bekoren\n"
      ]
     }
    ],
@@ -244,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['nut', 'genoegen', 'derde', 'jaar', 'weer', 'vrolijk', 'elkaer', 'kopperfeest', 'goddank', 'verbond', 'stand', 'houden', 'dee', 'staan', 'nut', 'bevatten', 'nut', 'genieten', 'dees', 'vriendenrij', 'lijden', 'komen', 'ziekengeld', 'regten', 'prijs', 'stellen', 'gevoel', 'heerlijk', 'doel', 'laten', 'zoo', 'voorwaarts', 'gaan', 'inslaan', 'baan', 'ieders', 'nut', 'genoegen', 'kosterschaar', 'klinken', 'feestbokaal', 'zaal', 'genoegen', 'zang', 'muzijk', 'wijn', 'kopperfeest', 'komen', 'broeder', 'glas', 'vatten', 'gevuld', 'druivennat', 'drinken', 'zaam', 'coster', 'naam', 'welaan', 'welaan', 'welaan', 'moog', 'gelukkig', 'gaan', 'kring', 'o', 'god', 'bidden', 'behoed', 'dee', 'vriendenrij', 'jaar', 'jaar', 'dank', 'elkaer']\n"
+      "['huldezang', 'o', 'achtbaar', 'hoofd', 'stad', 'beschermheer', 'kring', 'gun', 'schaar', 'vam', 'vriend', 'lof', 'bezingen', 'o', 'god', 'zien', 'vaderoog', 'beschermer', 'neer', 'hart', 'klimmen', 'bidden', 'verhoor', 'bede', 'heer', 'komen', 'feestgenoot', 'zingen', 'eer', 'elks', 'patroon', 'verheft', 'lied', 'verheugd', 'blij', 'dankbaarheid', 'schoon', 'danken', 'o', 'edel', 'tal', 'goed', 'verrigt', 'hart', 'blijv', 'staan', 'vall', 'verpligt', 'dankbaarheid', 'ontgloeien', 'verheffen', 'hart', 'zang', 'eer', 'onvermoeid', 'behartigd', 'belang', 'gods', 'zegen', 'blijv', 'gestaag', 'o', 'venman', 'baan', 'neemt', 'blijde', 'vriendenrei', 'gul', 'danktoon', 'voorstander', 'blijven', 'ons', 'kring', 'bidden', 'schoon', 'rijk', 'zegening', 'maken', 'steun', 'blij', 'onspoed', 'wereld', 'zuur', 'snell', 'leven', 'harten', 'word', 'edel', 'vuur', 'menschenmin', 'bekoren']\n"
      ]
     }
    ],
@@ -287,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['nut', 'genoegen', 'derde', 'jaar', 'weer', 'vrolijk', 'elkaer', 'kopperfeest', 'goddank', 'verbond', 'stand', 'houden', 'dee', 'staan', 'nut', 'bevatten', 'nut', 'genieten', 'dees', 'vriendenrij', 'lijden', 'komen', 'ziekengeld', 'regten', 'prijs', 'stellen', 'gevoel', 'heerlijk', 'doel', 'laten', 'zoo', 'voorwaarts', 'gaan', 'inslaan', 'baan', 'ieders', 'nut', 'genoegen', 'kosterschaar', 'klinken', 'feestbokaal', 'zaal', 'genoegen', 'zang', 'muzijk', 'wijn', 'kopperfeest', 'komen', 'broeder', 'glas', 'vatten', 'gevuld', 'druivennat', 'drinken', 'zaam', 'coster', 'naam', 'welaan', 'welaan', 'welaan', 'moog', 'gelukkig', 'gaan', 'kring', 'o', 'god', 'bidden', 'behoed', 'dee', 'vriendenrij', 'jaar', 'jaar', 'dank', 'elkaer']\n"
+      "['huldezang', 'o', 'achtbaar', 'hoofd', 'stad', 'beschermheer', 'kring', 'gun', 'schaar', 'vam', 'vriend', 'lof', 'bezingen', 'o', 'god', 'zien', 'vaderoog', 'beschermer', 'neer', 'hart', 'klimmen', 'bidden', 'verhoor', 'bede', 'heer', 'komen', 'feestgenoot', 'zingen', 'eer', 'elks', 'patroon', 'verheft', 'lied', 'verheugd', 'blij', 'dankbaarheid', 'schoon', 'danken', 'o', 'edel', 'tal', 'goed', 'verrigt', 'hart', 'blijv', 'staan', 'vall', 'verpligt', 'dankbaarheid', 'ontgloeien', 'verheffen', 'hart', 'zang', 'eer', 'onvermoeid', 'behartigd', 'belang', 'gods', 'zegen', 'blijv', 'gestaag', 'o', 'venman', 'baan', 'neemt', 'blijde', 'vriendenrei', 'gul', 'danktoon', 'voorstander', 'blijven', 'ons', 'kring', 'bidden', 'schoon', 'rijk', 'zegening', 'maken', 'steun', 'blij', 'onspoed', 'wereld', 'zuur', 'snell', 'leven', 'harten', 'word', 'edel', 'vuur', 'menschenmin', 'bekoren']\n"
      ]
     }
    ],
    "source": [
-    "replaceDict = {\"koster\":\"coster\", \"costers\":\"coster\", \"kosters\":\"coster\", \"vreugd\":\"vreugde\"}\n",
+    "replaceDict = {\"koster\":\"coster\", \"costers\":\"coster\", \"kosters\":\"coster\", \"vreugd\":\"vreugde\", \"neerlands\":\"nederland\", \"nederlandsch\":\"nederland\", \"nederlands\":\"nederland\", \"hollands\": \"holland\", \"hollandsch\": \"holland\"}\n",
     "removeList  = []\n",
     "\n",
     "processed_liedjes = []\n",
@@ -338,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,85 +397,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vinding 0\n",
-      "broeder 0\n",
-      "orde 0\n",
-      "baas 0\n",
-      "makker 0\n",
-      "kop 0\n",
-      "wetenschap 0\n",
-      "drukkunst 0\n",
-      "vriendschap 0\n",
-      "wijn 0\n",
-      "glas 0\n",
-      "patroon 0\n",
-      "pers 0\n",
-      "drukker 0\n",
-      "vriendschapsband 0\n",
-      "onafhankelijkheid 0\n",
-      "bier 0\n",
-      "toasten 0\n",
-      "eereleden 0\n",
-      "schijnen 0\n",
-      "beschermheer 0\n",
+      "branden 0\n",
+      "beschermheer 1\n",
       "uitdenken 0\n",
-      "steen 0\n",
-      "glimmen 0\n",
-      "stralen 0\n",
-      "wijsheid 0\n",
-      "beker 0\n",
-      "zilver 0\n",
-      "verlichting 0\n",
-      "vrind 0\n",
+      "kop 0\n",
+      "zetter 0\n",
       "roos 0\n",
       "zuigen 0\n",
-      "kelk 0\n",
-      "beeld 0\n",
-      "donateur 0\n",
-      "uitvinden 0\n",
-      "fakkel 0\n",
-      "boekdrukkunst 0\n",
-      "vriend 0\n",
-      "branden 0\n",
-      "stout 0\n",
-      "typograaf 0\n",
-      "goud 0\n",
-      "vaderland 1\n",
-      "lid 0\n",
-      "roemer 0\n",
-      "binder 0\n",
-      "zak 0\n",
-      "zink 0\n",
-      "gezelschap 0\n",
-      "druivennat 0\n",
-      "palladium 0\n",
-      "klinken 0\n",
-      "drinken 0\n",
-      "vrijheid 0\n",
-      "broederschap 0\n",
-      "letterzetter 0\n",
-      "blik 0\n",
-      "standbeeld 0\n",
-      "metaal 0\n",
-      "drank 0\n",
+      "beker 0\n",
+      "makker 0\n",
       "drukkerij 0\n",
-      "lichtstraal 0\n",
+      "blik 0\n",
+      "zilver 0\n",
+      "lid 0\n",
+      "bier 0\n",
+      "drank 0\n",
+      "letterzetter 0\n",
+      "vriend 1\n",
+      "vinding 0\n",
+      "zink 0\n",
+      "toasten 0\n",
+      "fakkel 0\n",
+      "binder 0\n",
+      "palladium 0\n",
+      "standbeeld 0\n",
+      "uitvinden 0\n",
+      "druivennat 0\n",
+      "vriendschap 0\n",
+      "baas 0\n",
+      "verlichting 0\n",
+      "pers 0\n",
+      "drinken 0\n",
+      "glimmen 0\n",
+      "boekdrukkunst 0\n",
+      "metaal 0\n",
+      "vrijheid 0\n",
+      "goud 0\n",
+      "beeld 0\n",
+      "broeder 0\n",
       "drukpers 0\n",
       "vriendenkring 0\n",
-      "zetter 0\n",
+      "vrind 0\n",
+      "onafhankelijkheid 0\n",
+      "typograaf 0\n",
       "geboortegrond 0\n",
-      "uitvinding 0\n",
       "duisternis 0\n",
+      "eereleden 0\n",
+      "donateur 0\n",
+      "orde 0\n",
+      "vriendschapsband 0\n",
       "licht 0\n",
+      "vaderland 0\n",
+      "klinken 0\n",
+      "uitvinding 0\n",
+      "wijsheid 0\n",
+      "stralen 0\n",
+      "stout 0\n",
+      "wijn 0\n",
+      "kelk 0\n",
       "toorts 0\n",
-      "drukken 0\n"
+      "zak 0\n",
+      "steen 0\n",
+      "drukken 0\n",
+      "glas 0\n",
+      "schijnen 0\n",
+      "patroon 1\n",
+      "drukker 0\n",
+      "broederschap 0\n",
+      "gezelschap 0\n",
+      "lichtstraal 0\n",
+      "wetenschap 0\n",
+      "drukkunst 0\n",
+      "roemer 0\n"
      ]
     }
    ],
@@ -488,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +509,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kop\n",
+      "roos\n",
+      "zuigen\n",
+      "beker\n",
+      "bier\n",
+      "drank\n",
+      "toasten\n",
+      "druivennat\n",
+      "drinken\n",
+      "klinken\n",
+      "stout\n",
+      "wijn\n",
+      "kelk\n",
+      "zak\n",
+      "glas\n",
+      "roemer\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "for j in range(len(topicVectors[i])):\n",
+    "    if (topicVectors[i][j] == 1):\n",
+    "        print(preciseLiedjesVocabulary[j])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -544,49 +578,49 @@
       "---------\n",
       "topic:  0\n",
       "aantal terms vd topic : 132\n",
-      "belangrijkste liedje  : 354\n",
+      "belangrijkste liedje  : 354 ../../data/liedjes/utrecht1851-feestzangen1854/utrecht1851-feestzangen1854-14.txt\n",
       "afstand topic-liedje  : 0.5103103630798288\n",
       "vector topic-liedje   : [0.5103103630798288, 0.12309149097933275, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "---------\n",
       "topic:  1\n",
       "aantal terms vd topic : 85\n",
-      "belangrijkste liedje  : 148\n",
+      "belangrijkste liedje  : 148 ../../data/liedjes/amsterdam1857-1-feestliederen1861/amsterdam1857-1-feestliederen1861-03.txt\n",
       "afstand topic-liedje  : 0.6030226891555273\n",
       "vector topic-liedje   : [0.0, 0.6030226891555273, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
       "---------\n",
       "topic:  2\n",
       "aantal terms vd topic : 19\n",
-      "belangrijkste liedje  : 318\n",
+      "belangrijkste liedje  : 318 ../../data/liedjes/utrecht1851-feestzangen1853/utrecht1851-feestzangen1853-05.txt\n",
       "afstand topic-liedje  : 0.5853694070049636\n",
       "vector topic-liedje   : [0.1386750490563073, 0.08362420100070908, 0.5853694070049636, 0.0, 0.0, 0.1386750490563073, 0.0, 0.0]\n",
       "---------\n",
       "topic:  3\n",
       "aantal terms vd topic : 156\n",
-      "belangrijkste liedje  : 49\n",
+      "belangrijkste liedje  : 49 ../../data/liedjes/album1856/album1856-49.txt\n",
       "afstand topic-liedje  : 0.629940788348712\n",
       "vector topic-liedje   : [0.0, 0.0, 0.0, 0.629940788348712, 0.0, 0.0, 0.0, 0.0]\n",
       "---------\n",
       "topic:  4\n",
       "aantal terms vd topic : 29\n",
-      "belangrijkste liedje  : 41\n",
+      "belangrijkste liedje  : 41 ../../data/liedjes/album1856/album1856-41.txt\n",
       "afstand topic-liedje  : 0.46291004988627577\n",
       "vector topic-liedje   : [0.0, 0.0, 0.0, 0.0, 0.46291004988627577, 0.0, 0.0, 0.0]\n",
       "---------\n",
       "topic:  5\n",
       "aantal terms vd topic : 9\n",
-      "belangrijkste liedje  : 200\n",
+      "belangrijkste liedje  : 200 ../../data/liedjes/haarlem1851-iisgdossier/haarlem1851-iisgdossier-04.txt\n",
       "afstand topic-liedje  : 0.5\n",
       "vector topic-liedje   : [0.0, 0.15075567228888181, 0.15075567228888181, 0.0, 0.0, 0.5, 0.0, 0.0]\n",
       "---------\n",
       "topic:  6\n",
       "aantal terms vd topic : 15\n",
-      "belangrijkste liedje  : 288\n",
+      "belangrijkste liedje  : 288 ../../data/liedjes/middelburg1847-feestbundel1864/middelburg1847-feestbundel1864-84.txt\n",
       "afstand topic-liedje  : 0.7071067811865475\n",
       "vector topic-liedje   : [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.7071067811865475, 0.0]\n",
       "---------\n",
       "topic:  7\n",
       "aantal terms vd topic : 10\n",
-      "belangrijkste liedje  : 317\n",
+      "belangrijkste liedje  : 317 ../../data/liedjes/utrecht1851-feestzangen1853/utrecht1851-feestzangen1853-04.txt\n",
       "afstand topic-liedje  : 0.5163977794943222\n",
       "vector topic-liedje   : [0.0, 0.17407765595569785, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5163977794943222]\n"
      ]
@@ -604,7 +638,7 @@
     "    print('---------')\n",
     "    print('topic: ', j)\n",
     "    print('aantal terms vd topic :', len(topicList[j]))\n",
-    "    print('belangrijkste liedje  :', maxdoc)\n",
+    "    print('belangrijkste liedje  :', maxdoc, liedjesList[maxdoc])\n",
     "    print('afstand topic-liedje  :', value)\n",
     "    print('vector topic-liedje   :', document_topic_distance_matrix[maxdoc])\n",
     "\n"
